# chhavi_esphome_fingerprint

./: README.md  fingerprint-chhavi.yaml
Binaries/: README.md
components/fingerprint_chhavi/: __init__.py  bmlite_if.c  fingerprint_chhavi.cpp  fingerprint_chhavi.h  hcp_tiny.c  platform.c  platform.h
custom_components/fingerprint_chhavi/: CMakeCache.txt  CMakeLists.txt  __init__.py  binary_sensor.py  bmlite_hal.c  bmlite_hal.h  bmlite_if.c  bmlite_if_callbacks.h  fingerprint_chhavi.cpp  fingerprint_chhavi.h  fpc_bmlite.c  hcp_tiny.c  hcp_tiny.h  sensor.py
custom_components/text_sensor/: text_sensor.cpp
